grammar.txt
Program           ::= (FunctionDefinition)* EOF

FunctionDefinition ::= 'f' Identifier ArgumentList '=>' Expression

ArgumentList      ::= Identifier*

Expression        ::= IfExpression
                    | BinaryExpression
                    | FunctionCall
                    | ListInit
                    | Literal

IfExpression      ::= 'if' Expression 'then' Expression ('else' Expression)?

BinaryExpression  ::= BasicExpression (BinaryOperator Expression)?

FunctionCall      ::= Identifier '(' Expression* ')'

ListInit          ::= '[' (Expression)* ']'

Literal           ::= Identifier ('[' Index ']')?
                    | Number
                    | String

Index             ::= '[' Number ']'

BasicExpression   ::= FunctionCall
                    | ListInit
                    | Literal

BinaryOperator    ::= '-' | '+' | '*' | '/' 
                    | '==' | '!=' | '<' | '<=' | '>' | '>='

Identifier        ::= Token of type ID
Number            ::= Token of type NUMBER
String            ::= Token of type STRING
EOF               ::= Token of type END_OF_FILE
